[package]
name = "missile_commander"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
macroquad = { version = "0.4.4", features = ["audio"] }

[profile.release]
strip = true
lto = true
codegen-units = 1
