[package]
name = "missile_commander"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
macroquad = { version = "0.4.4", features = ["audio"] }
rust-embed = { version = "8.2.0", features = ["compression"] }
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"

[profile.release]
strip = true
lto = true
codegen-units = 1
